WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35018
[GTK] WebKitDownload documentation is incomplete
https://bugs.webkit.org/show_bug.cgi?id=35018
Summary
[GTK] WebKitDownload documentation is incomplete
Diego Escalante Urrelo
Reported
2010-02-16 20:28:29 PST
Patch follows.
Attachments
2010-02-16 Diego Escalante Urrelo <descalante@igalia.com>
(3.79 KB, patch)
2010-02-16 20:32 PST
,
Diego Escalante Urrelo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Diego Escalante Urrelo
Comment 1
2010-02-16 20:32:07 PST
Created
attachment 48859
[details]
2010-02-16 Diego Escalante Urrelo <
descalante@igalia.com
> Reviewed by NOBODY (OOPS!). [GTK] WebKitDownload documentation is incomplete
https://bugs.webkit.org/show_bug.cgi?id=35018
Concretely the error signal was undocumented. Also two relevant enums were not included. * docs/webkitgtk-sections.txt: * docs/webkitgtk.types: * webkit/webkitdownload.cpp: (webkit_download_class_init):
Gustavo Noronha (kov)
Comment 2
2010-02-18 06:08:00 PST
Comment on
attachment 48859
[details]
2010-02-16 Diego Escalante Urrelo <
descalante@igalia.com
> 229229 * WebKitDownload::error: 230230 * @download: the object on which the signal is emitted 231 * @current_bytes: the current count of bytes downloaded 232 * @total_bytes: the total bytes count in the downloaded file, aka file size. That rocks lol =)
WebKit Commit Bot
Comment 3
2010-02-18 06:27:24 PST
Comment on
attachment 48859
[details]
2010-02-16 Diego Escalante Urrelo <
descalante@igalia.com
> Clearing flags on attachment: 48859 Committed
r54959
: <
http://trac.webkit.org/changeset/54959
>
WebKit Commit Bot
Comment 4
2010-02-18 06:27:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug