2010-02-18  Diego Escalante Urrelo  <descalante@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] WebKitDownload documentation is incomplete
        https://bugs.webkit.org/show_bug.cgi?id=35018

        Concretely the error signal was undocumented. Also two relevant enums
        were not included.

        * docs/webkitgtk-sections.txt:
        * docs/webkitgtk.types:
        * webkit/webkitdownload.cpp:
        (webkit_download_class_init):

Canonical link: https://commits.webkit.org/46266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54959 268f45cc-cd09-0410-ab3c-d52691b4dbfc